# Deep-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  demo_conversation.py  demo_health_research.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.cmd  run_app.cmd  run_autonomous.py  run_conversation.py  run_generate_docs.cmd  run_research.py  run_tests.cmd  schedule_mission.cmd  setup_diagrams.cmd  setup_diagrams.ps1
.streamlit/: config.toml  secrets.toml.example
Docs/: Deep_Research_Agent_Architecture.docx  Deep_Research_Agent_CLI_Reference.docx  Deep_Research_Agent_Master_Guide.docx  Deep_Research_Agent_Master_Troubleshooting_Guide.docx  Deep_Research_Custom_Tools_Reference.docx  Deep_Research_Session_Management_Guide.docx  Deep_Research_Streamlit_UI_Reference.docx  Keys.txt  LEGAL.md  LINKEDIN_LAUNCH.md  PRELAUNCH_CHECKLIST.md  STREAMLIT_CLOUD_DEPLOY.md
deep_research/: __init__.py  agent.py  autonomous.py  autonomous_examples.py  autonomous_mission.py  autonomous_prompts.py  conversation.py  conversation_examples.py  cursor_adapter.py  cursor_options.py  demo_config.py  demo_limits.py  display.py  examples.py  pipeline.py  prompts.py  rag.py  run_registry.py  session_context.py  types.py
missions/: protein_digestion.json
scripts/: common.py  diff_sessions.py  doc_common.py  generate_all_docs.py  schedule_mission.py  verify_setup.py
tests/: test_api.py  test_atomic_io.py  test_background_runs.py  test_demo_config.py  test_follow_up.py  test_mission.py  test_pdf_enhanced.py  test_rag_and_tools.py  (+8 more)
(+56 files in other folders)
