[project]
name = "deep-research"
version = "0.1.0"
description = "Autonomous deep research agent with Streamlit UI"
requires-python = ">=3.10"
dependencies = [
    "cursor-agent-core",
    "agent-core",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "streamlit>=1.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_research*"]
